--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,11 @@
 \section{Conclusão}
-Desta maneira, apesar de possuírem diferentes desempenhos dependendo da ordenação da lista, os algoritmos em questão, possuem um baixo proveito com listas muito grandes. Portanto, a fim de ordenar uma lista com maior rapidez, é notável que a função built-in do Python deve, pelo menos para listas grandes, ser usada em relação aos outros métodos outrora discutidos.
+Desta maneira, apesar de deterem diferentes desempenhos dependendo da ordenação da lista, os algoritmos em questão possuem um baixo proveito com listas muito grandes. Portanto, a fim de ordenar uma lista com maior rapidez, é aconselhável utilizar a função já implementada do Python, conhecida como timsort.
 
-Adicionalmente, o algoritmo de contagem, ainda que possua um comportamento linear em relação ao tamanho das listas, pode sofrer variações em razão da diferença entre o maior e o menor elemento da lista, isto é, ainda que a lista seja relativamente pequena, o tempo de realização do algoritmo pode ser muito alto caso dependendo da variação entre os números. Assim, é aconselhável a utilização do algoritmo em pauta apenas com listas que possuem uma exígua variação.
+Adicionalmente, o algoritmo de contagem, ainda que o vetor passado tenha poucos elementos, pode ter um tempo de execução muito alto em razão da variação entre os números. Assim, é aconselhável a utilização do algoritmo em pauta apenas com listas com uma exígua variação.
 
-Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido a listas com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Dessa forma, o bolha é recomendado apenas para fins didáticos.
+Em outra perspectiva, o bolha foi o algoritmo que apresentou o menor rendimento quando submetido as listas com diferentes tamanhos; o contagem, por outro lado, garantiu, apesar da faixa de valores maior, o melhor desempenho, principalmente nas listas com mais elementos. Dessa forma, a utilização do bolha é recomendada apenas para fins didáticos.
+
+\section{Considerações finais}
+A realização deste relatório possibilitou o aprendizado em diversas áreas do conhecimento, especialmente na análise de algoritmos, ao separá-los por casos e verificá-los individualmente.
+Além disso, o projeto proporcionou uma ampla experiência na criação de textos acadêmicos e na investigação da eficiência e do comportamento de um algoritmo.
+Portanto, o exercício programa permitiu um aprimoramento em competências que serão de extrema importância para futuros projetos.
