--- a/counting.tex
+++ b/counting.tex
@@ -1,18 +1,18 @@
 \section{Algoritmo de contagem}
-Diferentemente dos algoritmos outrora apresentados, o algoritmo em tópico possui uma complexidade linear, isto é, o tempo levado para ordenar uma lista, ao contrário dos apresentados, não cresce de maneira quadrática. 
+Diferentemente dos algoritmos outrora discutidos, o contagem possui uma complexidade linear, isto é, o tempo levado para ordenar cresce proporcionalmente com o tamanho da lista recebida. 
 
-Em relação ao uso de memória, contudo, há uma grande desvantagem no algoritmo, uma vez que a lista auxiliar utilizada possuirá $\max{lista}-\min{lista} $ elementos; ou seja, caso o maior elemento seja 5000 e o menor 1000, a lista auxiliar possuirá de 4000 elementos.
+Em relação ao uso de memória, contudo, há uma grande desvantagem no algoritmo: devido ao uso de uma lista auxiliar, esta possuirá $\max({lista})-\min({lista}) $ elementos; ou seja, caso o maior elemento seja 5000 e o menor 1000, a lista auxiliar possuirá de 4000 elementos.
 
 Dessa forma, o algoritmo possui um melhor proveito se utilizado para listas com pouca variação de tamanho entre os seus elementos.
 
 \subsection{Exemplo}
 Seja $M$ a lista $[4,2,3,1,4,2,2,0]$. Como a diferença entre o maior e o menor é elemento é 4, a lista auxiliar $Aux$ será de tamanho 4.
-Assim, a lista auxiliar será da seguinte forma (assumindo que o primeiro elemento é $Aux[0]$): o primeiro elemento terá o valor igual à quantidade de zeros na lista original, que é 1, o segundo elemento também será 1 por motivo análogo, o terceiro elemento de $Aux$, por outro lado, receberá o valor 3, uma vez que há três elementos 2 na lista original. Essa lógica seguirá até chegar no último elemento.
+Assim, a lista auxiliar $Aux$ será da seguinte forma (assumindo que o primeiro elemento é $Aux[0]$): o primeiro elemento terá o valor igual à quantidade de zeros na lista original, que é 1, o segundo elemento também será 1 por motivo análogo, e o terceiro elemento de $Aux$, por outro lado, receberá o valor 3, uma vez que há três elementos 2 na lista original. Essa lógica prevalecerá até último elemento.
 Assim, de início, a lista $Aux$ será [1,1,3,1,2].
 
-Em seguida, começará a modificação da lista original: serão adicionados à lista original $n$ vezes o elemento referente ao índice da lista auxiliar, ou seja, como $Aux[0]$ é igual a 1, será adicionado um zero a $M$ (adicionando pela direita e um ao lado do outro). Em $Aux[2]$, por exemplo, o elemento é 3, assim, será adicionado o elemento 2 três vezes seguidas à lista $M$.
+Em seguida, começará a modificação da lista original: serão adicionados à lista original $n$ vezes o elemento referente ao índice da lista auxiliar, ou seja, como $Aux[0]$ é igual a 1, será adicionado um zero a $M$ (adicionando da esquerda para a direita e um ao lado do outro). Em $Aux[2]$, por exemplo, o elemento é 3 e, assim, será adicionado o elemento 2 três vezes seguidas à lista $M$.
 
-Seguem os valores de \code{Aux} a cada modificação e:
+Seguem os valores de \code{Aux} a cada modificação:
 \begin{lstlisting}
 [0, 0, 0, 0, 0]
 [1, 0, 0, 0, 0]
@@ -38,7 +38,7 @@ Para fins elucidativos, serão substituídos por "0" os elementos já existentes
 Percebe-se, portanto, que a lista foi ordenada realizando-se nenhuma comparação.
 
 \subsection{Implementação}
-Segue a implementação do algoritmo em questão em Python.
+Segue a implementação do algoritmo em questão em Python:
 
 \begin{lstlisting}
 def counting(V, n):
@@ -53,7 +53,7 @@ def counting(V, n):
             index += 1
 \end{lstlisting}
 Como se pode perceber, o algoritmo de contagem, assim como os outros, possui duas malhas de repetição. Contudo, em vez de as malhas estarem aninhada, uma ocorre após a outra.
-Apesar disso, uma singularidade desse algoritmo é que, ao contrário dos outros, a quantidade de itinerações na primeira malha de repetição depende do tamanho do maior elemento (pensando apenas na implementação com números positivos), tornando-o eficaz para listas grandes e com elementos menores.
+Apesar disso, uma singularidade desse algoritmo é que, ao contrário dos citados, a quantidade de itinerações na primeira malha de repetição depende do tamanho do maior elemento (pensando apenas na implementação com números positivos), tornando-o eficaz para listas grandes e com elementos menores.
 
 \subsection{Quantidade de comparações}
 Diferentemente de todos os algoritmos outrora citados, este não realiza qualquer comparação.
